task-manager-app/development/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: task-manager-ingress

spec:
  ingressClassName: nginx

  rules:
    - host: task.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: frontend-service

                port:
                  number: 80
